@@ -1,4 +1,4 @@
 init:
-    jsl retry_level_load_init
+    jsl retry_level_init_1_init
     jsl retry_level_transition_init
     rtl
