@@ -1,3 +1,0 @@
-init:
-    jsl retry_level_init_1_init
-    rtl
