@@ -10,7 +10,6 @@ A: Inserting this patch should be relatively simple in most cases.
     0F retry_gm0F.asm
     10 retry_gm10_16_19.asm
     11 retry_gm11.asm
-    12 retry_gm12.asm
     13 retry_gm13.asm
     14 retry_gm14.asm
     16 retry_gm10_16_19.asm
