@@ -24,3 +24,6 @@ v0.1.5:
 v0.1.6:
     - Fixed room checkpoints respawning the player in the wrong sublevel sometimes (thanks FYRE150 for reporting this).
     - Fixed graphical glitches in some of the mode 7 vanilla bosses when the prompt was active.
+    - Fixed error on SA-1 that made respawning in midway entrances not work correctly.
+    - Fixed error where the midway bar for the current sublevel would respawn when leaving the current level, entering another one then going back to that sublevel (thanks FYRE150 for reporting this).
+    - Added fix from original Retry involving secondary exits and "No Yoshi" intros.
